fixed navbar center if navbar items wrap into the next line

--- a/src/less/components/navbar.less
+++ b/src/less/components/navbar.less
@@ -155,8 +155,7 @@
  ========================================================================== */
 
 /*
- * 1. Allow items to wrap into the next line
- * 2. Reset lists
+ * 1. Reset lists
  */
 
 .uk-navbar-nav {
@@ -164,13 +163,19 @@
     display: -webkit-flex;
     display: flex;
     /* 1 */
-    -ms-flex-wrap: wrap;
-    -webkit-flex-wrap: wrap;
-    flex-wrap: wrap;
-    /* 2 */
     margin: 0;
     padding: 0;
     list-style: none;
+}
+
+/*
+ * Allow items to wrap into the next line
+ */
+
+:not(.uk-navbar-center) > .uk-navbar-nav {
+    -ms-flex-wrap: wrap;
+    -webkit-flex-wrap: wrap;
+    flex-wrap: wrap;
 }
 
 /*
